--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pathera Coaching</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-5.5/css/all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='slick/slick.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='slick/slick-theme.css') }}">
@@ -155,11 +156,13 @@
       <div class="container tm-testimonials-content">
         <div class="row">
           <div class="col-lg-12 tm-content-box">
+            <h5 id="switchTitle" class="text-white text-center mb-8 tm-section-title" style="font-size: 16px; text-align: center;">Zu Lebensmittelrechner wechseln</h5>
             <div class="lebensmittelswitch" style="text-align: center;">
-              <label class="switch" for="toggleButton">
-                <input type="checkbox" id="toggleButton"/>
-                <div></div>
-              </label>
+                <label class="switch" for="toggleButton">
+                    <input type="checkbox" id="toggleButton"/>
+                    <div></div>
+                </label>
+                <hr>
             </div>
             <div class="kalorienrechner">
               <h2 class="text-white text-center mb-4 tm-section-title">Kalorienrechner</h2>
@@ -386,13 +389,15 @@
             </p>
             <div class="container">
               <div class="row">
-                <div class="col-sm">
-                </div>
-                <div class="col-sm">
-                  <div class="container">
-                    <label class="switch" for="switch"><input type="checkbox" id="switch"/>    <div></div>
-                    </label>
-                  </div>
+                  <div class="col-sm"></div>
+                  <div class="col-sm">
+                      <div class="container">
+                          <h5 id="toggleText" class="text-white text-center mb-8 tm-section-title" style="font-size: 16px; text-align: center; font-weight: bold;">Frageformular</h5>
+                          <label class="switch" for="switch">
+                              <input type="checkbox" id="switch"/>
+                              <div></div>
+                          </label>
+                      </div>
                 </div>
                 <div class="col-sm">
                 </div>
@@ -549,7 +554,25 @@
   </div>
   <div class="col-sm-12 col-md-6"></div>
     <div id="registrationForm2"></div>
-    <footer>
+    </section>
+    <!--  FAQ  -->
+    <section>
+        <div class="container tm-testimonials-content">
+          <div class="row">
+            <div class="col-lg-12 tm-content-box">
+              <div class="faq">
+                <h2 class="text-black text-center mb-4 tm-section-title">FAQ</h2>
+                <p class="mx-auto tm-section-desc text-center">
+                FAQ.... Coming soon
+                </p>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+  
+    <footer style="background-color: #D7ba89;">
       <hr class="border-top">
       <div class="container">
           <div class="row">
@@ -568,9 +591,6 @@
       </div>
   </footer>
   
-  
-  
-    </section>
 
     <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/slick/slick.min.js') }}"></script>
@@ -578,6 +598,9 @@
     <script src="{{ url_for('static', filename='js/easing.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.singlePageNav.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
 
       function getOffSet(){
@@ -852,7 +875,31 @@
     }
 });
 
+document.addEventListener("DOMContentLoaded", function () {
+    var switchElement = document.getElementById("switch");
+    var toggleTextElement = document.getElementById("toggleText");
 
+    switchElement.addEventListener("change", function () {
+        if (switchElement.checked) {
+            toggleTextElement.innerText = "Anmeldeformular";
+        } else {
+            toggleTextElement.innerText = "Frageformular";
+        }
+    });
+});
+
+document.addEventListener("DOMContentLoaded", function () {
+    var switchElement = document.getElementById("toggleButton");
+    var switchTitleElement = document.getElementById("switchTitle");
+
+    switchElement.addEventListener("change", function () {
+        if (switchElement.checked) {
+            switchTitleElement.innerText = "Zu Kalorienrechner wechseln";
+        } else {
+            switchTitleElement.innerText = "Zu Lebensmittelrechner wechseln";
+        }
+    });
+});
 
     </script>
   </body>
