--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                   <a class="nav-link tm-nav-link" href="#gallery">Galerie</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#kontakt">Kontakt</a>
+                  <a class="nav-link tm-nav-link" href="#contact">Kontakt</a>
               </li>
             </ul>
           </div>
@@ -102,7 +102,7 @@
                 </div>
                 
                 <div class="col-lg-1">
-                    <i class="far fa-3x fa-comment-alt text-center tm-icon" style="color:black;"></i>
+                    <i class="far fa-3x fa-comment-alt tm-icon" style="color:black;"></i>
                 </div>
                 <div class="col-lg-5">
                     <div class="tm-intro-text-container">
@@ -175,21 +175,21 @@
                   <div class="calculator">
                       <div class="choose-gender">
                           <div class="segmented-control"><input id="calc-gender-male" type="radio" name="gender" value="male"
-                                  checked=""><label for="calc-gender-male">Male</label></div>
+                                  checked=""><label for="calc-gender-male">Männlich</label></div>
                           <div class="segmented-control">
                               <input id="calc-gender-female" type="radio" name="gender" value="female"><label
-                                  for="calc-gender-female">Female</label>
+                                  for="calc-gender-female">Weiblich</label>
                           </div>
                       </div>
-                      <label for="calc-age" id="calc-age_value">Age: 25</label>
+                      <label for="calc-age" id="calc-age_value">Alter: 25</label>
                       <input id="calc-age" type="range" value="20" min="18" max="100">
-                      <label for="calc-height" id="calc-height_value">Height: 180cm</label>
+                      <label for="calc-height" id="calc-height_value">Grösse: 180cm</label>
                       <input id="calc-height" type="range" value="180" min="120" max="220">
-                      <label for="calc-weight" id="calc-weight_value">Weight: 80kg</label>
+                      <label for="calc-weight" id="calc-weight_value">Gewicht: 80kg</label>
                       <input id="calc-weight" type="range" value="80" min="40" max="200">
-                      <label for="calc-walking" id="calc-walking_value">Walking: 2 hours per week</label>
+                      <label for="calc-walking" id="calc-walking_value">Laufen: 2 Stunden pro Woche</label>
                       <input id="calc-walking" type="range" value="2" min="0" max="50">
-                      <label for="calc-cardio" id="calc-cardio_value">Cardio: 1 hour per week</label>
+                      <label for="calc-cardio" id="calc-cardio_value">Cardio: 1 Stunden pro Woche</label>
                       <input id="calc-cardio" type="range" value="1" min="0" max="50">
                   </div>
                   <div class="results">
