--- a/static/css/tooplate-infinite-loop.css
+++ b/static/css/tooplate-infinite-loop.css
@@ -1142,4 +1142,11 @@ input[type="text"] {
   }
 
   /*FAQ*/
-  
+
+faq {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+  padding: 0 20px;
+}
+
