--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='slick/slick.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='slick/slick-theme.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='magnific-popup/magnific-popup.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/tooplate-infinite-loop.css') }}">
-    
     
 
   </head>
@@ -299,6 +299,8 @@
               <h2 class="tm-text-primary tm-section-title mb-4" style="color:black;">Galerie</h2>
               <p class="mx-auto tm-section-desc">
                 Coming soon...
+                <iframe src="https://instagram.com/patheracoaching?igshid=YTQwZjQ0NmI0OA==" width="320" height="400" frameborder="0" scrolling="no"></iframe>
+
               </p>
           </div>
         </div>
@@ -563,13 +565,49 @@
               <div class="faq">
                 <h2 class="text-black text-center mb-4 tm-section-title">FAQ</h2>
                 <p class="mx-auto tm-section-desc text-center">
-                FAQ.... Coming soon
+                Häufig gestellte Fragen
                 </p>
+                <div class="accordion accordion-flush" id="accordionFlushExample" style="align-items: center;">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="background-color: transparent; border: none; width: 100%; outline: none;">
+                        Wie kann ich dich für eine Coachinganfrage kontaktieren?
+                      </button>
+                      <hr>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">Bitte verwende das Kontaktformular für die Kontaktaufnahme oder allfällige Fragen. Die Antwort erhältst du per Mail. Alternativ kannst du mich auch per Whatsapp kontaktieren --> <code><a rel="nofollow" href="https://wa.me/41765336444">+41 76 533 64 44</a></code></div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color: transparent; border: none; width: 100%; outline: none;">
+                        Frage 2
+                      </button>
+                      <hr>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">blablabla</div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color: transparent; border: none; width: 100%; outline: none;">
+                        Frage 3
+                      </button>
+                      <hr>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                      <div class="accordion-body">blablabla</div>
+                    </div>
+                  </div>
+                </div>
                 
               </div>
             </div>
           </div>
         </div>
+        <br>
     </section>
   
     <footer style="background-color: #D7ba89;">
@@ -577,7 +615,7 @@
       <div class="container">
           <div class="row">
               <div class="col-lg-12">
-                  <p class="mb-3 text-left">Pathera Coaching</p>
+                  <p class="mb-3 text-left" style="color:black">Pathera Coaching</p>
                   <a rel="nofollow" href="https://wa.me/41765336444" class="item-link text-left">
                       <i class="fab fa-whatsapp fa-2x mr-4"></i>
                       <span class="mb-0">+41 76 533 64 44</span>
@@ -586,6 +624,7 @@
                       <i class="fab fa-instagram fa-2x mr-4"></i>
                       <span class="mb-0">patheracoaching</span>
                   </a>
+                  <br>
               </div>
           </div>
       </div>
