--- a/templates/index.html
+++ b/templates/index.html
@@ -576,29 +576,45 @@
                       <hr>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Bitte verwende das Kontaktformular für die Kontaktaufnahme oder allfällige Fragen. Die Antwort erhältst du per Mail. Alternativ kannst du mich auch per Whatsapp kontaktieren --> <code><a rel="nofollow" href="https://wa.me/41765336444">+41 76 533 64 44</a></code></div>
+                      <div class="accordion-body">Bitte verwende das Kontaktformular für die Kontaktaufnahme oder allfällige Fragen. Die Antwort erhältst du per Mail. Alternativ kannst du mich auch per Whatsapp kontaktieren. --> <code><a rel="nofollow" href="https://wa.me/41765336444">+41 76 533 64 44</a></code></div>
                     </div>
                   </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingTwo">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color: transparent; border: none; width: 100%; outline: none;">
-                        Frage 2
+                        Was ist mein Grundbedarf an Kalorien?
                       </button>
                       <hr>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">blablabla</div>
+                      <div class="accordion-body">Der Kalorienbedarf bezieht sich auf die Menge an Energie in Form von Kalorien, die der Körper benötigt, um seine grundlegenden Funktionen aufrechtzuerhalten und Aktivitäten auszuführen. Dieser Bedarf variiert von Person zu Person und hängt von Faktoren wie Alter, Geschlecht, Körpergröße, Gewicht, Stoffwechsel und Aktivitätsniveau ab. Um gesund zu bleiben, ist es wichtig, den Kalorienbedarf aus einer ausgewogenen Ernährung zu decken, die ausreichend Energie liefert, um den Körper zu unterstützen. Eine übermäßige Kalorienaufnahme kann zur Gewichtszunahme führen, während ein Kaloriendefizit zur Gewichtsabnahme führen kann.
+                        Um deinen Kalorienbedarf zu berechnen, kannst du den Kalorienrechner verwenden. <a href="#testimonials">Zum Kalorienrechner</a>
+
+                      </div>
                     </div>
                   </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingThree">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color: transparent; border: none; width: 100%; outline: none;">
-                        Frage 3
+                        Wie wird der Lebensmittelumrechner verwendet.
                       </button>
                       <hr>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">blablabla</div>
+                      <div class="accordion-body">Der Lebensmittelumrechner hilft dir, eine gesündere Wahl zu treffen. Er zeigt dir, wie viel von einem anderen Lebensmittel du essen kannst, um die gleiche Kalorienmenge wie dein ursprüngliches Lebensmittel zu erreichen. Dies gibt dir mehr Abwechslung in deiner Ernährung. Denke daran, mit mir darüber zu sprechen.<br>
+                        <hr>
+                        Hier ist, wie es funktioniert:
+                        <br>
+                        <ul>
+                          <li>Im Lebensmittelplan fügst du das Lebensmittel ein, das du ersetzen möchtest, in die Spalte "Lebensmittel Plan".</li>
+                          <li>In der Spalte "Lebensmittel Alternative" gibst du das Lebensmittel ein, das du stattdessen essen möchtest.</li>
+                          <li>Trage die Nährwertangaben des neuen Lebensmittels aus der Verpackung in die entsprechenden Felder ein.</li>
+                          <li>In der Spalte "Kcal Vorgabe" gibst du die Kalorienmenge ein, die du nach deinem Plan zu dir nehmen sollst.</li>
+                          <li>Klicke auf "Berechnen", und der Rechner zeigt dir, wie viel du von dem neuen Lebensmittel essen kannst, um die gleiche Kalorienmenge wie beim ursprünglichen Lebensmittel zu erreichen.</li>
+                        </ul>
+                        
+
+                      </div>
                     </div>
                   </div>
                 </div>
