--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
                           In einer Phase, in der ich meine Ernährung vernachlässigte, traf ich die Entscheidung zur Veränderung. Mein Durst nach Wissen wuchs, und ich vertiefte mich in Bücher über Ernährung, was meine Leidenschaft für das Thema entfachte. Das Resultat? Eine Gewichtsabnahme von 15 Kilogramm und eine Steigerung meines Wohlbefindens.</p>
                           
                           <div class="tm-continue">
-                            <!--<a href="#testimonials" class="tm-intro-text tm-btn-primary">Learn More</a>-->
+
                         </div>
                     </div>
                 </div>
@@ -299,8 +299,7 @@
               <h2 class="tm-text-primary tm-section-title mb-4" style="color:black;">Galerie</h2>
               <p class="mx-auto tm-section-desc">
                 Coming soon...
-                <iframe src="https://instagram.com/patheracoaching?igshid=YTQwZjQ0NmI0OA==" width="320" height="400" frameborder="0" scrolling="no"></iframe>
-
+                <a href="https://shorthaired-comfort-f60.notion.site/6ee1e42a0246431889cb2aaf46b71193?v=947333774256474d835fd676beccb0cf&pvs=4">LINK</a>
               </p>
           </div>
         </div>
