--- a/templates/index.html
+++ b/templates/index.html
@@ -299,7 +299,7 @@
               <h2 class="tm-text-primary tm-section-title mb-4" style="color:black;">Galerie</h2>
               <p class="mx-auto tm-section-desc">
                 Coming soon...
-                <a href="https://shorthaired-comfort-f60.notion.site/6ee1e42a0246431889cb2aaf46b71193?v=947333774256474d835fd676beccb0cf&pvs=4">LINK</a>
+                <!-- <a href="https://shorthaired-comfort-f60.notion.site/6ee1e42a0246431889cb2aaf46b71193?v=947333774256474d835fd676beccb0cf&pvs=4">LINK</a> -->
               </p>
           </div>
         </div>
