change naming rezepte

--- a/templates/index.html
+++ b/templates/index.html
@@ -297,7 +297,7 @@
       <div class="container tm-container-gallery">
         <div class="row">
           <div class="text-center col-12">
-              <h2 class="tm-text-primary tm-section-title mb-4" style="color:black;">Meine Rezepte</h2>
+              <h2 class="tm-text-primary tm-section-title mb-4" style="color:black;">Rezepte</h2>
               <p class="mx-auto tm-section-desc" style="font-size: 18px;">
                 Eine richtige Ernährung ist von entscheidender Bedeutung für deine Gesundheit und dein Wohlbefinden. Eine bewusste Ernährung kann dazu beitragen, dein Immunsystem zu stärken, dein Energielevel zu erhöhen und langfristig Krankheiten vorzubeugen.Es ist wichtig zu beachten, dass eine ausgewogene Ernährung einfacher umzusetzen ist, wenn Abwechslung auf dem Speiseplan steht und du nicht auf alles verzichten musst. Darüber hinaus sind einige meiner Rezepte so konzipiert, dass sie als gesunde Alternativen zu Fastfood dienen und dir somit eine bessere Wahl bieten. Die Rezepte die ich erstellt habe, sind eine Inspirationsquelle, um gesunde Essgewohnheiten zu fördern und die Vielfalt in deiner Ernährung zu entdecken. Du kannst sie in deinen Alltag integrieren und auf deine individuellen Bedürfnisse anpassen. Falls du persönliches Ernährungscoaching wünschst, können diese Rezepte auch in deine Beratung einbezogen werden. Starte noch heute deinen Weg zu einer gesünderen Ernährung und einem besseren Wohlbefinden.
                 <br>
