--- a/templates/index.html
+++ b/templates/index.html
@@ -82,11 +82,15 @@
             <div class="row tm-content-box"><!-- first row -->
                 <div class="col-lg-12 col-xl-12">
                     <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4 tm-section-title" style="color:black">Über mich</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Herzlich willkommen auf meiner Website! Mein Name ist Simone, und ich freue mich aufrichtig, dass du den ersten Schritt zu einer positiven Veränderung in deinem Leben gemacht hast. Lass mich dir ein wenig mehr über mich und meine Leidenschaft erzählen.</a>.</p>
+                        <h2 class="tm-text-primary mb-4 tm-section-title" style="color:black; text-align: center;">Über mich</h2>
+                        <p class="mb-4 tm-intro-text" style="text-align: center;">
+                          Herzlich willkommen auf meiner Website! 
+                          <br>
+                          Mein Name ist Simone, und ich freue mich aufrichtig, dass du den ersten Schritt zu einer positiven Veränderung in deinem Leben gemacht hast. Lass mich dir ein wenig mehr über mich und meine Leidenschaft erzählen.</a>.</p>
+                          <hr>
                     </div>
                 </div>
+                
 
             </div><!-- first row -->
             
@@ -98,8 +102,8 @@
                     <div class="tm-intro-text-container">
                         <h2 class="tm-text-primary mb-4" style="color:black;">Leidenschaftliches Coaching</h2>
                         <p class="mb-4 tm-intro-text">
-                          Mit einer leidenschaftlichen Hingabe für Coaching, liegt mein Fokus darauf, dein individuelles Gesundheitsziel zu unterstützen und dir dabei zu helfen, das Beste aus dir selbst herauszuholen. Ich teile mein Wissen und meine Erfahrung gerne, um dich auf deinem Weg zum Erfolg zu begleiten</p>
-                    </div>
+                          Das Coaching hat sich zu einer persöhnlichen Leidenschaft entwickelt. Mein Ziel ist es, dir bei deinen Gesundheitszielen zu helfen. Ich teile mein Wissen und meine Erfahrung gern, um dich auf deinem Weg zum Erfolg zu unterstützen und das Beste aus dir herauszuholen.</p>
+                        </div>
                 </div>
                 
                 <div class="col-lg-1">
@@ -109,8 +113,7 @@
                     <div class="tm-intro-text-container">
                         <h2 class="tm-text-primary mb-4" style="color:black">Schnelle Unterstützung</h2>
                         <p class="mb-4 tm-intro-text">
-                          Ich biete WhatsApp-Coaching an und stehe immer für deine Fragen bereit, um dir beim Erreichen deiner Diätziele schnell zu helfen.</p>
-                    </div>
+                          Ich biete WhatsApp-Coaching an und bin immer für dich da, um deine Fragen zu beantworten und dir schnell bei der Erreichung deiner Ziele zu helfen. Gemeinsam arbeiten wir an deinem Erfolg.   </div>
                 </div>
 
             </div><!-- second row -->
@@ -123,10 +126,8 @@
                     <div class="tm-intro-text-container">
                         <h2 class="tm-text-primary mb-4" style="color:black">Mein Weg</h2>
                         <p class="mb-4 tm-intro-text">
-                          In einer Phase, in der ich meine Ernährung vernachlässigte, traf ich die Entscheidung zur Veränderung. Mein Durst nach Wissen wuchs, und ich vertiefte mich in Bücher über Ernährung, was meine Leidenschaft für das Thema entfachte. Das Resultat? Eine Gewichtsabnahme von 15 Kilogramm und eine Steigerung meines Wohlbefindens.</p>
-                          
+                          In einer Phase, in der ich meine Ernährung vernachlässigte, traf ich die Entscheidung zur Veränderung. Mein Durst nach Wissen wuchs stetig, und ich tauchte tief in Bücher über Ernährung ein, was meine Leidenschaft für das Thema entfachte. Das Resultat? Ich habe 15 Kilogramm abgenommen, und mein allgemeines Wohlbefinden hat sich erheblich gesteigert. Diese Reise zur Gesundheit hat nicht nur mein Äußeres verändert, sondern auch meine Lebensqualität auf ein neues Niveau gehoben.                          
                           <div class="tm-continue">
-
                         </div>
                     </div>
                 </div>
@@ -138,8 +139,7 @@
                     <div class="tm-intro-text-container">
                       <h2 class="tm-text-primary mb-4" style="color:black">Gesundheit durch Wissen und Leidenschaft</h2>
                         <p class="mb-4 tm-intro-text">
-                          Meine Philosophie ist geprägt von der Überzeugung, dass Wissen und Leidenschaft der Schlüssel zu Gesundheit und Wohlbefinden sind. Als Coach ist es meine Mission, Menschen dabei zu helfen, ihre Gesundheitsziele zu erreichen, indem ich mein Wissen und meine Leidenschaft für Ernährung und Fitness teile. Ich bin fest davon überzeugt, dass eine gesunde Ernährung und Diät einfach und für jeden zugänglich sein können. Ich bin hier, um anderen zu zeigen, wie sie diesen Weg beschreiten können
-                      </p>
+                          In meiner Philosophie glaube ich fest daran, dass Wissen und Leidenschaft der Schlüssel zu Gesundheit und Wohlbefinden sind. Als Coach ist es meine Mission, Menschen dabei zu helfen, ihre Gesundheitsziele zu erreichen, indem ich mein Wissen und meine Begeisterung für Ernährung und Fitness mit ihnen teile. Ich bin zutiefst davon überzeugt, dass eine gesunde Ernährung und eine ausgewogene Diät einfach umsetzbar und für jeden erreichbar sind. Deshalb stelle ich auch Tools und Ressourcen zur Verfügung, die dir helfen, diesen Weg einfacher zu beschreiten. Mein Ziel ist es, anderen zu zeigen, wie sie diesen Weg erfolgreich beschreiten können. Diese Reise zur Gesundheit ist eine Reise, die wir gemeinsam unternehmen können.                      </p>
                           
                           <div class="tm-continue">
                             <!--<a href="#testimonials" class="tm-intro-text tm-btn-primary">Details</a>-->
@@ -299,12 +299,19 @@
           <div class="text-center col-12">
               <h2 class="tm-text-primary tm-section-title mb-4" style="color:black;">Rezepte</h2>
               <p class="mx-auto tm-section-desc" style="font-size: 18px;">
-                Eine richtige Ernährung ist von entscheidender Bedeutung für deine Gesundheit und dein Wohlbefinden. Eine bewusste Ernährung kann dazu beitragen, dein Immunsystem zu stärken, dein Energielevel zu erhöhen und langfristig Krankheiten vorzubeugen.Es ist wichtig zu beachten, dass eine ausgewogene Ernährung einfacher umzusetzen ist, wenn Abwechslung auf dem Speiseplan steht und du nicht auf alles verzichten musst. Darüber hinaus sind einige meiner Rezepte so konzipiert, dass sie als gesunde Alternativen zu Fastfood dienen und dir somit eine bessere Wahl bieten. Die Rezepte die ich erstellt habe, sind eine Inspirationsquelle, um gesunde Essgewohnheiten zu fördern und die Vielfalt in deiner Ernährung zu entdecken. Du kannst sie in deinen Alltag integrieren und auf deine individuellen Bedürfnisse anpassen. Falls du persönliches Ernährungscoaching wünschst, können diese Rezepte auch in deine Beratung einbezogen werden. Starte noch heute deinen Weg zu einer gesünderen Ernährung und einem besseren Wohlbefinden.
+                Eine gesunde Ernährung spielt eine entscheidende Rolle für deine Gesundheit und dein allgemeines Wohlbefinden. Sie kann dazu beitragen, dein Immunsystem zu stärken, dir mehr Energie verleihen und langfristig vor Krankheiten schützen. Eine bewusste Ernährung ist jedoch nicht gleichbedeutend mit striktem Verzicht. Vielmehr geht es darum, Abwechslung in deine Mahlzeiten zu bringen und die Freude am Essen zu bewahren.
+                Bei diesem Vorgehen unterstütze ich dich gerne.
                 <br>
+                Meine Pläne werden speziell für deine Bedürfnisse entwickelt und berücksichtigen Faktoren wie dein Körpergewicht, deine Aktivitätsstufe und deine persönlichen Ziele. Die Rezepte, die ich hier teile, sollen als Inspirationsquelle dienen, um gesunde Essgewohnheiten zu fördern und die Vielfalt in deiner Ernährung zu entdecken. Es ist wichtig zu beachten, dass nicht alle Rezepte genaue Mengenangaben enthalten, da diese stark von deinen individuellen Ernährungsplänen abhängen. 
+                Du kannst sie in deinen Alltag integrieren und an deine spezifischen Anforderungen anpassen.
+                <br>
+                Wenn du ein maßgeschneidertes Ernährungscoaching wünschst, können diese Rezepte als Ausgangspunkt dienen und in deine Beratung einfließen. Beginne noch heute deine Reise zu einer gesünderen Ernährung und einem verbesserten Wohlbefinden, wobei die genauen Mengen und Empfehlungen in deinem individuellen Ernährungsplan festgelegt werden.
                 <br>
                 <i class="fa fa-arrow-down"></i>
                 <br>
                 <a href="https://shorthaired-comfort-f60.notion.site/6ee1e42a0246431889cb2aaf46b71193?v=947333774256474d835fd676beccb0cf&pvs=4">Rezepte</a>
+                <br>
+                <!-- <a href="#contact">Kontakt</a> -->
               </p>
           </div>
         </div>
@@ -574,7 +581,7 @@
                 <div class="accordion accordion-flush" id="accordionFlushExample" style="align-items: center;">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="background-color: transparent; border: none; width: 100%; outline: none;">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="background-color: transparent; border: none; width: 100%; outline: none; font-size: 22px;">
                         Wie kann ich dich für eine Coachinganfrage kontaktieren?
                       </button>
                       <hr>
@@ -585,7 +592,7 @@
                   </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingTwo">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color: transparent; border: none; width: 100%; outline: none;">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="background-color: transparent; border: none; width: 100%; outline: none; font-size: 22px;">
                         Was ist mein Grundbedarf an Kalorien?
                       </button>
                       <hr>
@@ -599,8 +606,8 @@
                   </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingThree">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color: transparent; border: none; width: 100%; outline: none;">
-                        Wie wird der Lebensmittelumrechner verwendet.
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="background-color: transparent; border: none; width: 100%; outline: none; font-size: 22px;">
+                        Wie wird der Lebensmittelumrechner verwendet?
                       </button>
                       <hr>
                     </h2>
