change background and optimize forms

--- a/templates/index.html
+++ b/templates/index.html
@@ -309,7 +309,7 @@
                 <br>
                 <i class="fa fa-arrow-down"></i>
                 <br>
-                <a href="https://shorthaired-comfort-f60.notion.site/6ee1e42a0246431889cb2aaf46b71193?v=947333774256474d835fd676beccb0cf&pvs=4">Rezepte</a>
+                <a href="https://shorthaired-comfort-f60.notion.site/6ee1e42a0246431889cb2aaf46b71193?v=947333774256474d835fd676beccb0cf&pvs=4" style="color:#D7ba89;">Rezepte</a>
                 <br>
                 <!-- <a href="#contact">Kontakt</a> -->
               </p>
@@ -456,10 +456,6 @@
           <hr>
           <h5 style="font-weight: bold;">Persönliche Angaben</h5>
           <br>
-          <p>
-            Hier gibst du deine grundlegenden persönlichen Informationen an, dazu gehören dein Name,
-            deine E-Mail-Adresse, dein Geschlecht, Alter, Größe und Gewicht.
-          </p>
           <input type="text" id="vorname" name="vorname" placeholder="Vorname" class="tm-input" required />
           <input type="text" id="nachname" name="nachname" placeholder="Nachname" class="tm-input" required />
           <input id="emailreg" name="emailreg" type="email" placeholder="Deine Email" class="tm-input" required />
@@ -476,7 +472,7 @@
           <h5 style="font-weight: bold;">Dein Lifestyle</h5>
           <br>
           <p>
-            In diesem Abschnitt beschreibst du deinen täglichen Lebensstil, einschließlich deines Berufs, deiner alltäglichen Bewegung und eines groben Tagesablaufs.
+            In diesem Abschnitt beschreibst du deinen täglichen Lebensstil, einschließlich deines Berufs, deiner alltäglichen Bewegung und einem groben Tagesablauf.
           </p>
           <label for="beruf">Beruf und Bewegung im Alltag:</label>
           <textarea type="text" id="beruf" name="beruf" rows="8" class="tm-input" required></textarea>
@@ -542,7 +538,7 @@
           <h5 style="font-weight: bold;">Ziel</h5>
           <br>
           <p>
-            In diesem Bereich beschreibst du dein persönliches Ziel in Bezug auf deine Gesundheit und Fitness. Du hast auch die Möglichkeit, optional ein Bild oder eine Darstellung deines Ziels hinzuzufügen.
+            In diesem Bereich beschreibst du dein persönliches Ziel in Bezug auf deine Gesundheit und Fitness.
           </p>
           <select id="zielart" name="zielart" class="tm-input" required style="background-color: transparent;">
             <option value="" style="display: none;">Ziel</option>
@@ -550,7 +546,9 @@
             <option value="Zunehmen">Zunehmen</option>
             <option value="Gewicht halten">Gewicht halten</option>
           </select>
-          <label for="ziel">Dein Ziel und optional ein Bild deines Ziels</label>
+          <br>
+          <label for="ziel">Dein Ziel</label>
+          <br>
           <textarea type="text" id="ziel" name="ziel" rows="4" class="tm-input" required></textarea>
           <br>
           <!-- 
@@ -587,7 +585,7 @@
                       <hr>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Bitte verwende das Kontaktformular für die Kontaktaufnahme oder allfällige Fragen. Die Antwort erhältst du per Mail. Alternativ kannst du mich auch per Whatsapp kontaktieren. --> <code><a rel="nofollow" href="https://wa.me/41765336444">+41 76 533 64 44</a></code></div>
+                      <div class="accordion-body">Bitte verwende das Kontaktformular für die Kontaktaufnahme oder allfällige Fragen. Die Antwort erhältst du per Mail. Alternativ kannst du mich auch per Whatsapp kontaktieren. --> <code><a rel="nofollow" href="https://wa.me/41765336444" style="color:#D7ba89;">+41 76 533 64 44</a></code></div>
                     </div>
                   </div>
                   <div class="accordion-item">
@@ -599,7 +597,7 @@
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                       <div class="accordion-body">Der Kalorienbedarf bezieht sich auf die Menge an Energie in Form von Kalorien, die der Körper benötigt, um seine grundlegenden Funktionen aufrechtzuerhalten und Aktivitäten auszuführen. Dieser Bedarf variiert von Person zu Person und hängt von Faktoren wie Alter, Geschlecht, Körpergröße, Gewicht, Stoffwechsel und Aktivitätsniveau ab. Um gesund zu bleiben, ist es wichtig, den Kalorienbedarf aus einer ausgewogenen Ernährung zu decken, die ausreichend Energie liefert, um den Körper zu unterstützen. Eine übermäßige Kalorienaufnahme kann zur Gewichtszunahme führen, während ein Kaloriendefizit zur Gewichtsabnahme führen kann.
-                        Um deinen Kalorienbedarf zu berechnen, kannst du den Kalorienrechner verwenden. <a href="#testimonials">Zum Kalorienrechner</a>
+                        Um deinen Kalorienbedarf zu berechnen, kannst du den Kalorienrechner verwenden. <a href="#testimonials" style="color:#D7ba89;">Zum Kalorienrechner</a>
 
                       </div>
                     </div>
@@ -623,6 +621,8 @@
                           <li>In der Spalte "Kcal Vorgabe" gibst du die Kalorienmenge ein, die du nach deinem Plan zu dir nehmen sollst.</li>
                           <li>Klicke auf "Berechnen", und der Rechner zeigt dir, wie viel du von dem neuen Lebensmittel essen kannst, um die gleiche Kalorienmenge wie beim ursprünglichen Lebensmittel zu erreichen.</li>
                         </ul>
+
+                        <a href="#testimonials" style="color:#D7ba89;">Zum Lebensmittelumrechner</a>
                         
 
                       </div>
@@ -640,22 +640,26 @@
     <footer style="background-color: #D7ba89;">
       <hr class="border-top">
       <div class="container">
-          <div class="row">
-              <div class="col-lg-12">
-                  <p class="mb-3 text-left" style="color:black">Pathera Coaching</p>
-                  <a rel="nofollow" href="https://wa.me/41765336444" class="item-link text-left">
+          <div class="row justify-content-between"> <!-- Verteilt den Inhalt zwischen den Rändern -->
+              <div class="col-lg-6 text-left"> <!-- Linker Bereich -->
+                  <p class="mb-3" style="color: black">Pathera Coaching</p>
+                  <a rel="nofollow" href="https://wa.me/41765336444" class="item-link">
                       <i class="fab fa-whatsapp fa-2x mr-4"></i>
                       <span class="mb-0">+41 76 533 64 44</span>
                   </a>
-                  <a href="https://www.instagram.com/patheracoaching/" class="item-link text-left">
+                  <a href="https://www.instagram.com/patheracoaching/" class="item-link">
                       <i class="fab fa-instagram fa-2x mr-4"></i>
                       <span class="mb-0">patheracoaching</span>
                   </a>
                   <br>
               </div>
+              <div class="col-lg-6 text-right"> <!-- Rechter Bereich (für das Logo) -->
+                  <img src="static\favicon.png" alt="Logo" width="125" height="125">
+              </div>
           </div>
       </div>
   </footer>
+  
   
 
     <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
@@ -967,6 +971,22 @@ document.addEventListener("DOMContentLoaded", function () {
     });
 });
 
+var formChanged = false; // Variable zur Verfolgung von Änderungen im Formular
+
+// Event-Listener für Eingabefelder
+document.querySelectorAll('input, textarea').forEach(function (input) {
+  input.addEventListener('input', function () {
+    formChanged = true; // Wenn ein Input-Wert geändert wurde, setze die Variable auf "true"
+  });
+});
+
+// Event-Listener für das Aktualisieren der Seite
+window.addEventListener('beforeunload', function (event) {
+  if (formChanged) {
+    // Wenn das Formular geändert wurde, zeige das Bestätigungs-Popup
+    event.returnValue = 'Es gibt nicht gespeicherte Änderungen auf der Seite. Möchtest du die Seite wirklich verlassen?';
+  }
+});
     </script>
   </body>
 </html>
