--- a/static/css/tooplate-infinite-loop.css
+++ b/static/css/tooplate-infinite-loop.css
@@ -1150,3 +1150,10 @@ faq {
   padding: 0 20px;
 }
 
+@media (max-width: 768px) {
+  /* Stile nur für Geräte mit einer Bildschirmbreite von 768 Pixeln oder weniger */
+  img {
+      max-width: 100%;
+  }
+}
+
