--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
       <div class="text-center tm-hero-text-container">
         <div class="tm-hero-text-container-inner">
           <!-- <hr style="background-color: #D7ba89; height:2px; width:25%;"> -->
-          <img src="{{ url_for('static', filename='Logo_pathera.png') }}" alt="Logo" class="img-fluid" style="max-width: 50%; height: auto;">
+          <img src="{{ url_for('static', filename='Logo_pathera.png') }}" alt="Logo" class="img-fluid" style="max-width: 50%; height: auto; @media (min-width: 768px) { max-width: 100%; }">
           <!-- <h2 class="tm-hero-title" style="font-size: 35px;">P A T H E R A</h2>
           <div style="text-align: center;">
               <hr style="background-color: #D7ba89; height:2px; width:7.5%; display: inline-block; margin: 0 10px;">
