--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                 <a class="nav-link tm-nav-link" href="#testimonials">Kalorienrechner</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#gallery">Galerie</a>
+                  <a class="nav-link tm-nav-link" href="#gallery">Rezepte</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link tm-nav-link" href="#contact">Kontakt</a>
