--- a/templates/index.html
+++ b/templates/index.html
@@ -143,14 +143,17 @@
                         <p class="mb-4 tm-intro-text">
                           In meiner Philosophie glaube ich fest daran, dass Wissen und Leidenschaft der Schlüssel zu Gesundheit und Wohlbefinden sind. Als Coach ist es meine Mission, Menschen dabei zu helfen, ihre Gesundheitsziele zu erreichen, indem ich mein Wissen und meine Begeisterung für Ernährung und Fitness mit ihnen teile. Ich bin zutiefst davon überzeugt, dass eine gesunde Ernährung und eine ausgewogene Diät einfach umsetzbar und für jeden erreichbar sind. Deshalb stelle ich auch Tools und Ressourcen zur Verfügung, die dir helfen, diesen Weg einfacher zu beschreiten. Mein Ziel ist es, anderen zu zeigen, wie sie diesen Weg erfolgreich beschreiten können. Diese Reise zur Gesundheit ist eine Reise, die wir gemeinsam unternehmen können.                      </p>
                           
-                          <div class="tm-continue">
-                            <!--<a href="#testimonials" class="tm-intro-text tm-btn-primary">Details</a>-->
-                        </div>
                     </div>
                 </div>
 
             </div><!-- third row -->
-
+            <hr>
+            <h3 class="tm-text-primary mb-4 tm-section-title" style="color:black;">Instagram</h3>
+            <p style="text-align: center;">Folge meiner Fitnessreise auf Instagram! Erhalte exklusive Einblicke, verpasse keine Updates und sei Mitglied in meiner motivierenden Community. Hol dir Inspiration, direkt von mir zu dir.</p>
+            <div class="row tm-content-box"><!-- forth row -->
+              <!-- LightWidget WIDGET -->
+              <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/71037b702a2c50869714c9eed4072ee5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+            </div> <!-- forth row -->
         </div>
       
     </section>
