--- a/templates/index.html
+++ b/templates/index.html
@@ -149,11 +149,10 @@
             </div><!-- third row -->
             <hr>
             <!-- forth row -->
-            <!-- <h3 class="tm-text-primary mb-4 tm-section-title" style="color:black;">Instagram</h3>
+            <h3 class="tm-text-primary mb-4 tm-section-title" style="color:black;">Instagram</h3>
             <p style="text-align: center;">Folge meiner Fitnessreise auf Instagram! Erhalte exklusive Einblicke, verpasse keine Updates und sei Mitglied in meiner motivierenden Community. Hol dir Inspiration, direkt von mir zu dir.</p>
             <div class="row tm-content-box">
-              <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/71037b702a2c50869714c9eed4072ee5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-            </div> -->
+<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/71037b702a2c50869714c9eed4072ee5.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>            </div>
         </div>
             <!-- forth row -->
     </section>
